--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "recipeapp",
-  "main": "expo-router/entry",
+  "name": "recipe-app",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "ts:check": "tsc"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.38",
-    "expo-font": "~13.0.4",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.18",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "expo": "~50.0.0",
+    "expo-dev-client": "~3.3.12",
+    "expo-file-system": "~16.0.0",
+    "expo-image": "~1.10.0",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "~14.7.1",
+    "expo-router": "^3.4.8",
+    "expo-status-bar": "~1.11.0",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.0",
+    "uuid": "^9.0.0",
+    "expo-constants": "~15.4.6",
+    "expo-modules-core": "~1.11.14",
+    "expo-system-ui": "~2.9.4",
+    "expo-linking": "~6.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "@types/uuid": "^9.0.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
