--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
-  "name": "recipe-app",
+  "name": "recipeapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "ts:check": "tsc"
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "expo": "~50.0.0",
-    "expo-dev-client": "~3.3.12",
-    "expo-file-system": "~16.0.0",
-    "expo-image": "~1.10.0",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-router": "^3.4.8",
-    "expo-status-bar": "~1.11.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "6.5.11",
+    "@react-navigation/native": "6.1.9",
+    "@react-navigation/native-stack": "6.9.17",
+    "@react-navigation/stack": "^7.2.3",
+    "expo": "~51.0.0",
+    "expo-document-picker": "^13.0.3",
+    "expo-file-system": "^18.0.12",
+    "expo-image-manipulator": "^13.0.6",
+    "expo-image-picker": "^16.0.6",
+    "expo-sharing": "^13.0.1",
+    "expo-sqlite": "^15.1.2",
+    "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.0",
-    "uuid": "^9.0.0",
-    "expo-constants": "~15.4.6",
-    "expo-modules-core": "~1.11.14",
-    "expo-system-ui": "~2.9.4",
-    "expo-linking": "~6.2.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "3.29.0",
+    "react-native-web": "~0.19.10",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "@types/uuid": "^9.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
